Cumulative Layout Shift fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -46,21 +46,6 @@ html {
     text-align: center;
 }
 
-.customNextImage{
-	height: fit-content;
-}
-
-.customNextImage span{
-	padding: 0px !important;
-	height: 100% !important;
-}
-
-.customNextImage > span img{
-	position: relative !important;
-	height: auto !important;
-}
-
-
 @media (min-width: 1024px) {
 	.lg\:bg-porto > span{
 		min-height: 100vh;
